Fix alignment of disabled doc versions

--- a/assets/stylesheets/components/_sidebar.scss
+++ b/assets/stylesheets/components/_sidebar.scss
@@ -224,7 +224,7 @@
   .open + & { display: block; }
   > ._list-item { padding-left: 2.375rem; }
   > ._list-dir, > ._list-sub > ._list-item { padding-left: 2.75rem; }
-  > ._list-disabled { padding-left: 3.875rem; }
+  > ._list-disabled { padding-left: 3.75rem; }
   > ._list-item:before { content: none; }
   > ._list-dir { line-height: 1.375rem; }
 
